# botik-vkbottle

./: README.md  pyproject.toml
src/botik_vkbottle/: app.py
src/botik_vkbottle/api/: api.py  api_type.py  send_message.py
src/botik_vkbottle/api/attachment_handlers/: photo_attachment_handler.py
src/botik_vkbottle/input/keyboard/: keyboard_markup.py  markup_factory.py
src/botik_vkbottle/input/keyboard/button/: button.py  button_factory.py
src/botik_vkbottle/input/message_handlers/: raw_message_handlers.py
src/botik_vkbottle/page/: page_factory.py
