[project]
name = "botik-vkbottle"
version = "0.0.1"
authors = [
    { name = "dasstyx", email = "dasstyx@gmail.com" },
]
description = "Extension for Botik to support VKBottle"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "api",
    "framework",
    "bot",
    "vk",
    "messenger",
    "async",
    "botik",
]

[project.urls]
"Homepage" = "https://github.com/dasstyx/botik-vkbottle"
"Bug Tracker" = "https://github.com/dasstyx/botik-vkbottle/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"